--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ description = "Mongoose meets Rust"
 members = ["derive"]
 
 [dependencies]
-async-trait = "0.1"
+async-trait = { version = "0.1", optional = true }
 bongo_derive = { path = "derive", optional = true }
 bson = "0.14"
 mongodb = "0.9"
@@ -23,5 +23,6 @@ thiserror = "1"
 tokio = { version = "0.2", optional = true, features = ["blocking"] }
 
 [features]
-default = ["derive", "tokio"]
+default = ["derive", "async"]
+async = ["async-trait", "tokio"]
 derive = ["bongo_derive"]
